# users-service

./: .env.dev  .env.dist  .env.test  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  generate_signature.py  pyproject.toml
.github/workflows/: cicd-stage.yml  development.yml  lints.yml  stage.yml  tests.yml  tests_and_lints.yml
alembic/: env.py
alembic/versions/: 3c822a812bba_added_permissions.py  a7574d08d9c7_.py  d8bcbf167e0f_added_user_avatars.py
app/: main.py  users.proto
app/project/: db.py  redis.py  rmq.py  settings.py
app/protobuf/: users_pb2.py  users_pb2.pyi  users_pb2_grpc.py
app/v1/: avatars.py  constants.py  crud.py  dependencies.py  exceptions.py  factories.py  files.py  graphql.py  grpc.py  models.py  schemas.py  utils.py
app/v1/graphql/: base.py  graph_types.py  main.py
app/v1/repositories/: permissions.py
app/v1/senders/: base.py  email.py  phone.py
app/v1/services/: permissions.py  sessions.py  tokens.py  users.py  verifications.py
docker/: Dockerfile.dev  Dockerfile.lint  Dockerfile.test
kubernetes/stage/: deployment.yml  ingress.yml  service.yml
kubernetes/stage/app/: deployment.yml  ingress.yml  migrations.yml  service.yml
kubernetes/stage/db/: deployment.yml  service.yml
kubernetes/stage/mailhog/: deployment.yml  ingress.yml  service.yml
kubernetes/stage/redis/: deployment.yml  service.yml
src/: alembic.ini
src/app/: dependencies.py
src/domain/: exceptions.py
src/domain/files/: models.py  ports.py
src/domain/general/: models.py
src/domain/notifications/: handlers.py  ports.py
src/domain/permissions/: models.py
src/domain/sessions/: exceptions.py  handlers.py  models.py  ports.py
src/domain/users/: exceptions.py  handlers.py  models.py  ports.py
src/infrastructure/: dependencies.py  exceptions.py  settings.py
src/infrastructure/api/: adapters.py  dependencies.py  factories.py  main.py
src/infrastructure/api/graphql/: base.py  graph_types.py
src/infrastructure/database/: adapters.py  base.py  exceptions.py  factories.py  models.py
src/infrastructure/grpc_server/: factories.py  server.py  users.proto
src/infrastructure/grpc_server/usersprotobuf/: users_pb2.py  users_pb2.pyi  users_pb2_grpc.py
src/infrastructure/memory_storage/: adapters.py  base.py  exceptions.py
src/infrastructure/migrations/alembic/: env.py
src/infrastructure/migrations/alembic/versions/: 53bb10f3d0f6_users_avatar_url.py  e81f9efa794b_removed_activities_field_for_user.py  f8d2546496f3_init_users_table.py
src/infrastructure/rabbit_publisher/: adapters.py  dtos.py  factories.py  publisher.py
src/infrastructure/senders/: email.py
src/infrastructure/templates/: email_verification.html
templates/: email_verification.html
tests/: base.py  conftest.py  test_sessions.py  test_tokens.py  test_users.py
